# mess

./: :  Cargo.toml  README.md  foo.out
.github/workflows/: build.yml
blockchain/: Cargo.toml
c/: a.out  main.c  stats.h  vec.h
guess-number/: Main.hs  main.hs
rust/shunting-yard/: Cargo.toml
rust/shunting-yard/src/: main.rs
scala/scalabf/: build.sc
scala/scalabf/scalabf/src/: Main.scala
split/: Main.hs
src/: .main.rs.un~  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  value.rs
src/builtins/: arithmetic.rs  cd.rs  collections.rs  commands.rs  if.rs  mod.rs  quote.rs
