[package]
name = "blockchain"
version = "0.1.0"
authors = ["Wafelack <wafelack@protonmail.com>"]
edition = "2018"
description = "Simple blockchain written in Rust"
license = "MPL-2.0"
repository = "https://github.com/wafelack/blockchain"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
sha2 = "0.9.2"
chrono = "0.4.19"